# s5_labs

Distributed Calculations/exam/: pom.xml
Distributed Calculations/lab2/task_c/: go.mod  main.go
Distributed Calculations/lab3/task_c/: go.mod  main.go
Distributed Calculations/lab4/: output.txt  records.txt
Distributed Calculations/lab4/task_c/: Main.go
Distributed Calculations/lab5/task_c/: main.go
Distributed Calculations/lab6/: CMakeLists.txt  main  main.cpp  matrix.h
Distributed Calculations/lab6/main.dSYM/Contents/Resources/DWARF/: main
Distributed Calculations/lab6/src/: CannonMultiplication.h  Common.h  FoxMultiplication.h  NaiveMultiplication.h  main.c  main.cpp  matrix.cpp  matrix.h
Distributed Calculations/lab7/: pom.xml
Distributed Calculations/lab8/: pom.xml
Distributed Calculations/modul1/: pom.xml
Number Methods/lab1/: Newton's Method.py  main.py
Number Methods/lab2/: main.py
Number Methods/lab3/: main.py  test.py
Number Methods/lab4/: main.py  pyvenv.cfg
Number Methods/lab5/: main.py
OOP/lab1/: pom.xml
OOP/lab2/: pom.xml
OOP/lab3/app/: build.gradle.kts
OOP/problems/: pom.xml
OOP/problems/problem_10/: pom.xml
OOP/problems/problem_7/: pom.xml
OS/lab2/lab2/: Summary-Processes  Summary-Results  scheduling.conf
Ruby/Zalik/: main.rb
Ruby/labs/: lab1.rb
Ruby/labs/lab2/: lab2a.rb  lab2b.rb  lab2c.rb  lab2d.rb
Ruby/labs/lab3/: lab3a.rb  lab3b.rb  lab3c.rb  lab3d.rb  lab3e.rb
Ruby/labs/lab4/: lab4a.rb  lab4b.rb
Ruby/labs/lab5/: lab5a.rb  lab5b.rb
Ruby/labs/lab6/: lab6.rb
Ruby/modul1/modul1/: task1.rb  (+1 more)
(+176 files in other folders)
